# uscensus-toolkit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/: FUNDING.yml
.github/workflows/: sphinx.yaml  test.yml
_modules/: functools.html  index.html
_modules/dartfx/uscensus/: uscensus.html
_modules/pydantic/_internal/: _model_construction.html
_sources/: modules.rst.txt
docs/source/: conf.py  index.rst
src/dartfx/uscensus/: __about__.py  __init__.py  uscensus.py
tests/: ACSPUMS1Y2023.croissant.json  ACSPUMS1Y2023.ddic.xml  __init__.py  conftest.py  test_cache.py  test_catalog.py  test_croissant.py  test_dataset.py  test_dcat.py  test_ddi.py
tests/ddi_2_5_1/schemas/: codebook.xsd  dc.xsd  dcmitype.xsd  ddi-xhtml11-model-1.xsd  ddi-xhtml11.xsd
tests/ddi_2_5_1/schemas/XHTML/: xhtml-blkphras-1.xsd  xhtml-blkpres-1.xsd  xhtml-blkstruct-1.xsd  xhtml-charent-1.xsd  xhtml-datatypes-1.xsd  xhtml-hypertext-1.xsd  xhtml-inlpres-1.xsd  xhtml-inlstruct-1.xsd  xhtml-inlstyle-1.xsd  xhtml-list-1.xsd  xhtml-notations-1.xsd  xhtml-pres-1.xsd  xhtml-table-1.xsd  xhtml-text-1.xsd
