[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dartfx-uscensus"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "kulnor", email = "pascal.heus@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mlcroissant>=1.0.0",
  "pydantic>=2.0.0",
  "requests_cache>1.0.0"
]

[project.urls]
Documentation = "https://github.com/DataArtifex/uscensus-toolkit#readme"
Issues = "https://github.com/DataArtifex/uscensus-toolkit/issues"
Source = "https://github.com/DataArtifex/uscensus-toolkit"


[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dartfx"]

[tool.hatch.version]
path = "src/dartfx/uscensus/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "lxml>=5.0.0",
  "python-dotenv>=1.0.0"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dartfx/uscensus tests}"

[tool.coverage.run]
source_pkgs = ["dartfx/uscensus", "tests"]
branch = true
parallel = true
omit = [
  "src/dartfx/uscensus/__about__.py",
]

[tool.coverage.paths]
source = ["src/dartfx/uscensus", "*/uscensus-toolkit/src/dartfx/uscensus"]
tests = ["tests", "*/dartfx/uscensus/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = "src"
