[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dartfx-uscensus"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "kulnor", email = "pascal.heus@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "mlcroissant>=1.0.0",
  "pydantic>=2.0.0",
  "requests_cache>1.0.0"
]

[project.urls]
Documentation = "https://github.com/DataArtifex/uscensus-toolkit#readme"
Issues = "https://github.com/DataArtifex/uscensus-toolkit/issues"
Source = "https://github.com/DataArtifex/uscensus-toolkit"


[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dartfx"]

[tool.hatch.version]
path = "src/dartfx/uscensus/__about__.py"

[dependency-groups]
dev = [
  "coverage[toml]>=6.5",
  "pytest>=9",
  "lxml>=5.0.0",
  "mypy>=1.0.0",
  "python-dotenv>=1.0.0",
  "ruff>=0.3.0",
  "pre-commit>=3.0.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.2.0",
  "myst-parser>=1.0.0",
  "sphinx-copybutton>=0.5.0",
]

[tool.hatch.envs.default]
dependencies = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = ["dev"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dartfx/uscensus tests}"

[tool.hatch.envs.docs]
dependencies = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build/html"
serve = "python -m http.server -d docs/build/html"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source_pkgs = ["dartfx/uscensus", "tests"]
branch = true
parallel = true
omit = [
  "src/dartfx/uscensus/__about__.py",
]

[tool.coverage.paths]
source = ["src/dartfx/uscensus", "*/uscensus-toolkit/src/dartfx/uscensus"]
tests = ["tests", "*/dartfx/uscensus/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["mlcroissant"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lxml", "lxml.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "PT",  # flake8-pytest-style
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dartfx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
